<resources>
    <string name="app_name">Scheduled App</string>
    <string name="app_email">contact.scheduledapp@gmail.com</string>

    <!-- Strings for Login and Sign up page -->
    <string name="welcome_text">Welcome to Scheduled App!</string>
    <string name="walkthrough_text">Just few more info!</string>

    <string name="prompt_ID">ID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_user_name">Username</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_portrait">Portrait</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_organization">Your organization</string>
    <string name="prompt_department">Your department</string>
    <string name="prompt_empty_field">Please fill all the fields!</string>
    <string name="prompt_no_data">Ops! No data available.</string>
    <string name="prompt_no_course">No course available!</string>
    <string name="prompt_no_routine">No routine available!</string>
    <string name="prompt_no_class_today">No Class Today!</string>
    <string name="prompt_no_class_this_week">No class this week!</string>
    <string name="prompt_no_class_tomorrow">No class tomorrow!</string>
    <string name="prompt_no_notice">No notice available!</string>
    <string name="prompt_no_assignment">No assignment available!</string>
    <string name="prompt_no_selected_course">Please select your course first!</string>
    <string name="prompt_no_internet_connection">Ops! No internet connection.</string>
    <string name="prompt_dialog_confirm_user">You are going to erase all data of this user</string>
    <string name="prompt_dialog_confirm_course">You are going to erase all data of this course</string>
    <string name="prompt_dialog_confirm_remove_users">You are going to remove all students</string>

    <string name="action_sign_up">Sign up</string>
    <string name="action_forgot_password">Forgot/Reset password?</string>
    <string name="action_next">Next</string>
    <string name="action_send_reset_email">Send Reset Email</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export This Notice</string>
    <string name="action_pick_date">Deadline</string>
    <string name="action_add_class">Add this class</string>
    <string name="action_update_class">Update</string>
    <string name="action_start_time">Start Time</string>
    <string name="action_end_time">End Time</string>
    <string name="action_update">Update</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_notice">Notice</string>
    <string name="title_activity_routine">Routine</string>
    <string name="title_activity_assignment">Assignment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_send_feedback">Feedback</string>
    <string name="title_activity_all_courses">AllCoursesActivity</string>
    <string name="title_dialog_confirm">Are you sure about this?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Username not available</string>
    <string name="nav_header_subtitle">User Id not available</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="category_today">Today</string>
    <string name="category_tomorrow">Tomorrow</string>
    <string name="category_this_week">This Week</string>
    <string name="category_all_courses">All Courses</string>
    <string name="category_fixed_courses">Fixed</string>
    <string name="category_enrolled_courses">Enrolled</string>
    <string name="account_title">Account</string>

    <!--Preference screen strings starts -->
    <string name="pref_summary_account">Edit user information</string>
    <string name="pref_title_account">Account Settings</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_username">Name</string>
    <string name="pref_default_display_name">John Doe</string>
    <string name="pref_user_organization_title">Organization</string>
    <string name="pref_organization_dialogue_title">Select your Organization</string>
    <string name="pref_department_dialogue_title">Select your Department</string>
    <string name="pref_user_department_title">Department</string>
    <string name="sub">State University of Bangladesh</string>
    <string name="pref_user_id">ID</string>
    <string name="pref_default_display_id">UG02&#8211;00&#8211;00&#8211;000</string>
    <string name="pref_default_display_email">scheduledapp@gmail.com</string>
    <string name="pref_default_display_phone">+88017111000</string>
    <string name="pref_user_email">Email</string>
    <string name="pref_user_phone">Phone</string>
    <string name="user_account_information_title">User Information</string>
    <string name="pref_registration_title">Registration</string>
    <string name="title_notification_status">Get Notifications</string>
    <string name="notifications_status">On</string>
    <string name="pref_notificationType_title">Notification Targets</string>
    <string name="pref_notificationType_dialog_title">Notifications you\'ll get from</string>
    <string name="pref_header_about_title">About</string>
    <string name="pref_notification_title">Notification</string>
    <string name="about_summary">This application is a simple notifier app to keep you updated.</string>
    <string name="title_version">Version</string>
    <string name="app_version">Alpha</string>

    <string name="choose_email_client">Choose email client</string>
    <string name="choose_export_option">Choose Option</string>

    <string name="key_pref_notifications">key_pref_notifications</string>
    <string name="key_pref_notification_targets">key_pref_notification_targets</string>
    <string name="key_pref_edit_user_info">key_pref_edit_user_info</string>
    <string name="key_send_feedback">feedback</string>
    <string name="key_contact_developer">key_contact_developer</string>
    <string name="key_user_course_registration">key_user_course_registration</string>


    <string name="summary_support">Send your feedback for better user experience</string>
    <string name="registration_summary">Select your courses</string>
    <string name="account_summary">Edit user account</string>

    <string-array name="pref_organizations_array">

        <item>State University of Bangladesh</item>
        <item>Department</item>

    </string-array>

    <string-array name="pref_department_array">

        <item>CSE</item>
        <item>Pharmacy</item>
        <item>Law</item>
        <item>Architecture</item>
        <item>BBA</item>

    </string-array>

    <string-array name="pref_notificationType_entries">

        <item>General</item>
        <item>Department</item>
        <item>Course</item>
        <item>Routine</item>

    </string-array>
    <string-array name="pref_notificationType_default">

        <item>General</item>
        <item>Department</item>
        <item>Course</item>
        <item>Routine</item>

    </string-array>
    <!--Preference screen strings ends -->


    <string-array name="array_notice_priority">

        <item>Normal</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>

    </string-array>


    <string-array name="array_week_day">

        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>

    </string-array>

    <string-array name="export_array">
        <!--<item>Export as PDF</item>-->
        <item>Export to Calendar</item>
    </string-array>

    <string-array name="roles_array_executive">
        <item>student</item>
        <item>teacher</item>
    </string-array>

    <string-array name="roles_array_super">
        <item>student</item>
        <item>teacher</item>
        <item>admin</item>
        <item>super</item>
    </string-array>


    <!--Developer Information-->
    <string name="developed_by">Designed &amp; developed by</string>
    <string name="developer_name">Mahfuj Ibne Alam \nStudent of CSE dept. Batch: 37\nState University of Bangladesh</string>
    <string name="developer_email">mibnealam@gmail.com</string>
    <string name="reach_developer">Reach Developer</string>
    <string name="find_code">Connect with Github</string>
    <string name="github_link">https://github.com/mibnealam/ScheduledApp</string>
    <string name="app_summary">This is a free and open source android application to help students and teachers with their academic schedule.</string>
    <string name="contribution">Everyone are welcome to contribute in the github codebase for better user experience and ask any question or help.</string>
    <string name="channel_name">Foreground Notification</string>
    <string name="channel_description">Controls foreground notifications</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="prompt_no_user">No users</string>

</resources>
