<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_root">
    <PreferenceCategory
        android:title="@string/pref_account_title"
        android:key="pref_key_account_settings">

        <Preference
            android:key="@string/key_pref_edit_user_info"
            android:title="@string/user_account_information_title"
            android:summary="@string/account_summary">
        </Preference>

        <!-- preference opens a registration intent -->
        <Preference
            android:key="@string/key_user_course_registration"
            android:title="@string/pref_registration_title"
            android:summary="@string/registration_summary">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notification_title"
        android:key="pref_key_storage_settings">
        <SwitchPreference
            android:key="@string/key_pref_notifications"
            android:summary="@string/notifications_status"
            android:title="@string/title_notification_status"
            android:defaultValue="true" />
        <!-- preference opens a registration intent -->
        <Preference
            android:key="@string/key_pref_notification_targets"
            android:title="@string/pref_notificationType_title"
            android:summary="@string/pref_notificationType_dialog_title">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about_title">

        <PreferenceScreen
            android:title="@string/app_name"
            android:summary="@string/about_summary">

            <Preference
                android:title="@string/developed_by"
                android:summary="@string/developer_name" />
            <Preference
                android:key="@string/key_contact_developer"
                android:title="@string/reach_developer"
                android:summary="@string/developer_email">
            </Preference>
            <Preference
                android:summary="@string/app_summary"/>
            <Preference
                android:title="@string/find_code"
                android:summary="@string/contribution">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/github_link"/>
            </Preference>

        </PreferenceScreen>

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" >
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
