<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreateAccountActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="3"
                android:hint="@string/prompt_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/action_create_account_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/action_next"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_margin="16dp"/>

    </LinearLayout>

</LinearLayout>