<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity"
    android:orientation="horizontal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_logo"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walkthrough_text"
                    android:layout_margin="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_marginBottom="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/prompt_organization"/>
                <Spinner
                    android:id="@+id/organizations_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/prompt_department"/>
                <Spinner
                    android:id="@+id/departments_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_ID"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/user_phone_no"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/prompt_phone"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="16dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/action_next"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</LinearLayout>